# collective.glossary

./: .codacy.yml  .coverage  .coveragerc  .gitignore  .jshintignore  .mrbob.ini  .travis.yml  CHANGELOG.md  CHANGES.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  DEVELOP.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  README_old.rst  base.cfg  bobtemplate.cfg  buildout.cfg  constraints_plone52.txt  constraints_plone60.txt  constraints_tox.txt  coverage.xml  instance.yaml  pyproject.toml  requirements.txt  requirements_52.txt  requirements_py27.txt  requirements_py36.txt  setup.cfg  setup.py  test-5.2.x.cfg  test_plone5.2.cfg  test_plone52.cfg  test_plone52_27.cfg  test_plone60.cfg  tests.yml  (+1 more)
.github/workflows/: black.yml  ci.yml  flake8.yml  main.yml  test-plone52-docker.yml  tests.yml
docs/: LICENSE.md  LICENSE.txt  README.md  conf.py  index.rst  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
news/: 1017.feature  72.internal
scripts/: create_site.py
src/collective/glossary/: __init__.py  config.py  configure.zcml  content.py  controlpanel.py  indexers.py  interfaces.py  logger.py  profiles.zcml  setuphandlers.py  testing.py  utils.py  vocabulary.py  vocabulary.zcml
src/collective/glossary/Extensions/: Install.py
src/collective/glossary/api/: configure.zcml
src/collective/glossary/api/services/: configure.zcml
src/collective/glossary/api/services/glossary/: configure.zcml  get.py
src/collective/glossary/behaviors/: configure.zcml  term_variations.py
src/collective/glossary/browser/: configure.zcml  views.py
src/collective/glossary/browser/static/: .gitignore  bundle.js  collective-glossary-bundle-compiled.js  collective-glossary-main-compiled.js  collective-glossary-tooltip-compiled.js  global.css  global.min.css  global.min.css.map  glossary-806a5ba.css  glossary-806a5ba.js  glossary-a85a929.js  glossary-tooltip.min.css  glossary-tooltip.min.css.map  glossary-tooltip.min.js  glossary-tooltip.min.js.map  glossary.min.css  glossary.min.css.map  glossary.min.js  glossary.min.js.map  jquery.glossarize.js  letter-filtering.css  main.css  main.js  resources.pt  tooltip.css  tooltip.js
src/collective/glossary/browser/static/css/: main.css
src/collective/glossary/browser/static/js/: main.js
src/collective/glossary/browser/templates/: glossary.pt  term.pt
src/collective/glossary/browser/viewlets/: configure.zcml  css_js.pt  viewlets.py
src/collective/glossary/content/: __init__.py
src/collective/glossary/locales/: README.md  collective.glossary.pot  update.py  update.sh
src/collective/glossary/locales/de/LC_MESSAGES/: collective.glossary.po
src/collective/glossary/locales/en/LC_MESSAGES/: collective.glossary.po
src/collective/glossary/locales/fr/LC_MESSAGES/: collective.glossary.po
src/collective/glossary/locales/nl/LC_MESSAGES/: collective.glossary.po
src/collective/glossary/profiles/default/: browserlayer.xml  catalog.xml  controlpanel.xml  cssregistry.xml  jsregistry.xml  metadata.xml  registry.xml  rolemap.xml  types.xml
src/collective/glossary/profiles/default/types/: Glossary.xml  Term.xml
src/collective/glossary/profiles/uninstall/: browserlayer.xml  registry.xml
src/collective/glossary/tests/: test_behavior_term_variations.py  test_controlpanel.py  test_glossary.py  test_glossary.robot  test_robot.py  test_setup.py  test_term.py  test_upgrades.py  test_views.py  todo_test_glossary.robot
src/collective/glossary/upgrades/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v1_1/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v1a/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v2/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v2a/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v2b/: __init__.py  configure.zcml
src/collective/glossary/upgrades/v2c/: configure.zcml
src/collective/glossary/upgrades/v3/: __init__.py  configure.zcml
tests/: conftest.py
tests/glossary/: test_controlpanel.py  test_glossary.py  test_term.py  test_views.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
webpack/: package.json  webpack.config.js
webpack/app/: glossary.js  glossary.scss
webpack/app/js/: tooltip.js
webpack/app/scss/: tooltip.css
webpack/tests/: glossary.spec.js
