[project]
name = "collective_glossary_Documentation"
description = "Content types to define a glossary and its terms"
keywords = [
    "collective.glossary",
    "documentation",
    "Plone",
    "Diátaxis",
]
version="1.0.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
maintainers = [
    { name = "Plone Community", email = "collective@plone.org" },
]
authors = [
    { name = "Plone Community", email = "collective@plone.org" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "graphviz",
    "linkify-it-py",
    "myst-parser",
    "plone-sphinx-theme>=1.4.1",  # Use the latest stable version or a minimum
    "setuptools",  # required by sphinxcontrib.httpexample, remove when it migrates to importlib. See https://github.com/collective/sphinxcontrib-httpexample/issues/106
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-examples",
    "sphinx-notfound-page",
    "sphinx-reredirects",
    "sphinx-sitemap",
    "sphinx-tippy",
    "sphinxcontrib-httpdomain",
    "sphinxcontrib-httpexample",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-video",
    "sphinxcontrib-youtube",
    "sphinxext-opengraph",
    "vale",
]

[project.urls]
Repository = "https://github.com/collective/collectiveglossary"
Documentation = "https://MY_READTHEDOCS_PROJECT_SLUG.readthedocs.io/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
